<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_marginStart="5dp"
        android:id="@+id/instagram_feed_search_listview_profile_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/Profile_pic"/>
    <TextView
        android:id="@+id/instagram_feed_search_listview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/instagram_feed_search_listview_profile_picture"
        android:layout_alignParentEnd="true"
        android:text="@string/default_naming"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="15dp"/>
    <ImageView
        android:contentDescription="@string/url_picture"
        android:id="@+id/instagram_feed_search_listview_url_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/instagram_feed_search_listview_profile_picture"/>
    <Button
        android:id="@+id/instagram_feed_search_favoris_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/instagram_feed_search_listview_url_picture"
        android:onClick="onClickButtonFavoris"/>
    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/add_commant"
        android:layout_below="@id/instagram_feed_search_listview_url_picture"
        android:layout_toStartOf="@id/instagram_feed_search_favoris_button"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClickButtonComment"/>
    <TextView
        android:id="@+id/instagram_feed_search_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/default_naming"
        android:layout_below="@id/instagram_feed_search_listview_url_picture"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>