<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_instagram_main_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/instagram_main_epicture_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlank"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/instagram_main_button_disconnect"
            android:layout_toEndOf="@id/instagram_main_epicture_logo"
            android:text="@string/Profile"
            android:textStyle="bold"
            android:textColor="@color/colorBlank"
            android:textSize="25sp"
            android:layout_centerVertical="true"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/instagram_main_button_disconnect"
           android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/icon_disconnect"
            android:layout_alignParentEnd="true"
            android:onClick="onClickButtonDisconnect"/>
    </RelativeLayout>

    <TextView
        android:layout_alignParentStart="true"
        android:layout_below="@id/activity_instagram_main_bar"
        android:layout_toStartOf="@+id/instagram_main_profile_picture"
        android:id="@+id/instagram_main_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:text="@string/default_naming"/>
    <TextView
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@+id/instagram_main_profile_picture"
        android:id="@+id/instagram_main_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instagram_main_full_name"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/default_naming"/>
    <ImageView
        android:layout_margin="3dp"
        android:contentDescription="@string/Profile_pic"
        android:layout_below="@id/activity_instagram_main_bar"
        android:id="@+id/instagram_main_profile_picture"
        android:layout_alignParentEnd="true"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/instagram_main_counts_medias"
        android:layout_below="@id/instagram_main_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/instagram_main_profile_picture"
        android:layout_marginStart="5dp"
        android:text="@string/default_naming"/>
    <TextView
        android:id="@+id/instagram_main_counts_followers"
        android:layout_below="@id/instagram_main_counts_medias"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/instagram_main_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/default_naming"/>
    <TextView
        android:id="@+id/instagram_main_counts_following"
        android:layout_below="@id/instagram_main_counts_followers"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/instagram_main_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/default_naming"/>
    <Button
        android:id="@+id/instagram_main_search_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/search_icon"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClickButtonSearch"/>
    <Button
        android:id="@+id/instagram_main_own_flow_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/my_profile"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClickButtonOwnFlow"/>
    <Button
        android:id="@+id/activity_instagram_main_fav_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/icon_favoris"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/instagram_main_own_flow_button"
        android:layout_marginStart="40dp"
        android:onClick="onClickButtonToFavButton"/>
    <Button
        android:id="@+id/instagram_main_add_picture_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/add_camera"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_toStartOf="@id/instagram_main_search_button"
        android:onClick="onClickButtonAddPhotos"
        android:layout_marginEnd="40dp"/>
</RelativeLayout>